# quick-launch

./: Cargo.toml  README.md  config.json  flake.nix  style.css  test.config
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
src/: main.rs  style.css
