[package]
name = "quick-launch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
gio = "0.20.12"
gtk4 = { version = "0.9.7", features = ["v4_12"] }
gtk4-layer-shell = "0.5.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
